Add block , text and inline elements

--- a/Happy-Trails-Travel-Agency/index.html
+++ b/Happy-Trails-Travel-Agency/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Happy Trails Travel Agency</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Happy Trails Travel Agency</h1>
@@ -38,8 +38,24 @@
         it also threatens to inundate the shores of this low-lying island nation.
       </p>
       <img src="https://www.planetware.com/photos-large/SEY/best-tropical-vacations-maldives.jpg" alt="Maldives-India">
+ <div class="popular">
 
+    <h3 class="popular">Popular destinations</h3>
+      <p class="popular">These are the popula destinations</p>
+        <ol>
+          <li>Maldives <br> <img src="https://www.planetware.com/photos-large/P/portugal-algarve-beach-resorts-epic-sana.jpg" alt="EPIC SANA"></li>
+          <li>Sagre beach <br> <img src="https://www.planetware.com/photos-large/P/portugal-algarve-beach-resorts-martinhal-sagres-beach-family-resort.jpg" alt="Sagres Beach hotel"></li>
+        </ol>
+ </div>
 
+    <h2>About</h2>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+    </p>
+  <footer>
+    <h2>Contact</h2>
+    You can speak to us here <a href="mailto:joe@example.com?subject=feedback">email us</a>
+  </footer>
 
   </body>
 </html>
